Added Red color palette

--- a/index.html
+++ b/index.html
@@ -16,13 +16,67 @@
     <div id="navbar">
       <a href="#default" id="logo">Cool_Colorpicker</a>
       <div id="navbar-right">
-        <span> <p id="social-msg">Follow me on</p> </span>
+        <div class="button-container">
+          <a
+            class="btn btn-default btn-round btn-lg btn-icon"
+            href="#"
+            rel="tooltip"
+            title="Follow me on Facebook"
+            ><i class="fa fa-facebook"></i>
+          </a>
+          <a
+            class="btn btn-default btn-round btn-lg btn-icon"
+            href="#"
+            rel="tooltip"
+            title="Follow me on Twitter"
+            ><i class="fa fa-twitter"></i
+          ></a>
+          <a
+            class="btn btn-default btn-round btn-lg btn-icon"
+            href="#"
+            rel="tooltip"
+            title="Follow me on LinkedIn"
+            ><i class="fa fa-linkedin"></i>
+          </a>
+          <a
+            class="btn btn-default btn-round btn-lg btn-icon"
+            href="#"
+            rel="tooltip"
+            title="Follow me on Google+"
+            ><i class="fa fa-google-plus"></i
+          ></a>
+          <a
+            class="btn btn-default btn-round btn-lg btn-icon"
+            href="#"
+            rel="tooltip"
+            title="Follow me on Instagram"
+            ><i class="fa fa-instagram"></i>
+          </a>
+        </div>
         <!-- <a class="active" href="#home">Home</a>
         <a href="#contact">Contact</a> <a href="#about">About</a> -->
       </div>
     </div>
 
     <div class="text-scroll">
+      <p class="color-name">Rocking Red</p>
+      <div class="cointainer rocking-red">
+        <div class="item item--1">#E44236</div>
+        <div class="item item--2">#B83227</div>
+        <div class="item item--3">#D63031</div>
+        <div class="item item--4">#E84342</div>
+        <div class="item item--5">#FF3031</div>
+        <div class="item item--6">#A2F16B</div>
+        <div class="item item--7">#EC4849</div>
+        <div class="item item--8">#FF3E4D</div>
+        <div class="item item--9">#E71C23</div>
+        <div class="item item--10">#EA425C</div>
+        <div class="item item--11">#E8290C</div>
+        <div class="item item--12">AE1438#</div>
+        <div class="item item--13">#E83350</div>
+        <div class="item item--14">#FF4848</div>
+        <div class="item item--15">#FF362E</div>
+      </div>
       <p>
         Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
