--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <div id="navbar">
-      <a href="#default" id="logo">Cool_Colorpicker</a>
+      <a href="#default"><img src="images/logo_2.PNG" alt="Logo" id="logo"/></a>
       <div id="navbar-right">
         <div class="button-container">
           <a
