--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="navbar">
       <a href="#default"><img src="images/logo_2.PNG" alt="Logo" id="logo"/></a>
-      <div id="navbar-right">
+      <!-- <div id="navbar-right">
         <div class="button-container">
           <a
             class="btn btn-default btn-round btn-lg btn-icon"
@@ -53,30 +53,50 @@
             ><i class="fa fa-instagram"></i>
           </a>
         </div>
-        <!-- <a class="active" href="#home">Home</a>
-        <a href="#contact">Contact</a> <a href="#about">About</a> -->
-      </div>
+        <a class="active" href="#home">Home</a>
+        <a href="#contact">Contact</a> <a href="#about">About</a> 
+      </div> -->
     </div>
 
     <div class="text-scroll">
       <p class="color-name">Rocking Red</p>
-      <div class="cointainer rocking-red">
-        <div class="item item--1">#E44236</div>
-        <div class="item item--2">#B83227</div>
-        <div class="item item--3">#D63031</div>
-        <div class="item item--4">#E84342</div>
-        <div class="item item--5">#FF3031</div>
-        <div class="item item--6">#A2F16B</div>
-        <div class="item item--7">#EC4849</div>
-        <div class="item item--8">#FF3E4D</div>
-        <div class="item item--9">#E71C23</div>
-        <div class="item item--10">#EA425C</div>
-        <div class="item item--11">#E8290C</div>
-        <div class="item item--12">AE1438#</div>
-        <div class="item item--13">#E83350</div>
-        <div class="item item--14">#FF4848</div>
-        <div class="item item--15">#FF362E</div>
+      <div class="cointainer">
+        <div class="item itemr itemr--1">#E44236</div>
+        <div class="item itemr itemr--2">#B83227</div>
+        <div class="item itemr itemr--3">#D63031</div>
+        <div class="item itemr itemr--4">#E84342</div>
+        <div class="item itemr itemr--5">#FF3031</div>
+        <div class="item itemr itemr--6">#A2F16B</div>
+        <div class="item itemr itemr--7">#EC4849</div>
+        <div class="item itemr itemr--8">#FF3E4D</div>
+        <div class="item itemr itemr--9">#E71C23</div>
+        <div class="item itemr itemr--10">#EA425C</div>
+        <div class="item itemr itemr--11">#E8290C</div>
+        <div class="item itemr itemr--12">AE1438#</div>
+        <div class="item itemr itemr--13">#E83350</div>
+        <div class="item itemr itemr--14">#FF4848</div>
+        <div class="item itemr itemr--15">#FF362E</div>
       </div>
+
+      <p class="color-name">Beautiful Blue</p>
+      <div class="cointainer">
+        <div class="item itemb itemb--1">#3498DB</div>
+        <div class="item itemb itemb--2">#2475B0</div>
+        <div class="item itemb itemb--3">#74B9FF</div>
+        <div class="item itemb itemb--4">#0A79DF</div>
+        <div class="item itemb itemb--5">#4834DF</div>
+        <div class="item itemb itemb--6">#30336B</div>
+        <div class="item itemb itemb--7">#487EB0</div>
+        <div class="item itemb itemb--8">#192A56</div>
+        <div class="item itemb itemb--9">#6A89CC</div>
+        <div class="item itemb itemb--10">#0A3D62</div>
+        <div class="item itemb itemb--11">#4BCFFA</div>
+        <div class="item itemb itemb--12">#0ABDE3</div>
+        <div class="item itemb itemb--13">#25CCF7</div>
+        <div class="item itemb itemb--14">#67E6CD</div>
+        <div class="item itemb itemb--15">#3C40C6</div>
+      </div>
+
       <p>
         Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
         adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
