Added Green color palette

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="text-scroll">
-      <p class="color-name">Rocking Red</p>
+      <p class="color-name" id="specialmargin">Rocking Red</p>
       <div class="cointainer">
         <div class="item itemr itemr--1">#E44236</div>
         <div class="item itemr itemr--2">#B83227</div>
@@ -78,7 +78,7 @@
         <div class="item itemr itemr--15">#FF362E</div>
       </div>
 
-      <p class="color-name">Beautiful Blue</p>
+      <p class="color-name spcmar">Beautiful Blue</p>
       <div class="cointainer">
         <div class="item itemb itemb--1">#3498DB</div>
         <div class="item itemb itemb--2">#2475B0</div>
@@ -95,6 +95,25 @@
         <div class="item itemb itemb--13">#25CCF7</div>
         <div class="item itemb itemb--14">#67E6CD</div>
         <div class="item itemb itemb--15">#3C40C6</div>
+      </div>
+
+      <p class="color-name">Golf Green</p>
+      <div class="cointainer">
+        <div class="item itemg itemg--1">#E44236</div>
+        <div class="item itemg itemg--2">#B83227</div>
+        <div class="item itemg itemg--3">#D63031</div>
+        <div class="item itemg itemg--4">#E84342</div>
+        <div class="item itemg itemg--5">#FF3031</div>
+        <div class="item itemg itemg--6">#A2F16B</div>
+        <div class="item itemg itemg--7">#EC4849</div>
+        <div class="item itemg itemg--8">#FF3E4D</div>
+        <div class="item itemg itemg--9">#E71C23</div>
+        <div class="item itemg itemg--10">#EA425C</div>
+        <div class="item itemg itemg--11">#E8290C</div>
+        <div class="item itemg itemg--12">AE1438#</div>
+        <div class="item itemg itemg--13">#E83350</div>
+        <div class="item itemg itemg--14">#FF4848</div>
+        <div class="item itemg itemg--15">#FF362E</div>
       </div>
 
       <p>
