Added Yellow color palette

--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
 
   <body>
     <div id="navbar">
-      <a href="#default"><img src="images/logo_2.PNG" alt="Logo" id="logo"/></a>
+      <a href="#default">
+        <img src="../images/logo_2.PNG" alt="Logo" id="logo" />
+      </a>
+
+      <!-- <div id="navbar-right">
+        <div class="button-cointainer">
+          <a
+            class="btn btn-default btn-round btn-lg btn-icon"
+            href="#"
+            rel="tooltip"
+            title="Star me on Github"
+            ><i class="fa fa-github"></i>
+          </a>
+        </div>
+      </div> -->
       <!-- <div id="navbar-right">
         <div class="button-container">
           <a
@@ -97,151 +111,43 @@
         <div class="item itemb itemb--15">#3C40C6</div>
       </div>
 
-      <p class="color-name">Golf Green</p>
+      <p class="color-name spcmar">Glowing Green</p>
       <div class="cointainer">
-        <div class="item itemg itemg--1">#E44236</div>
-        <div class="item itemg itemg--2">#B83227</div>
-        <div class="item itemg itemg--3">#D63031</div>
-        <div class="item itemg itemg--4">#E84342</div>
-        <div class="item itemg itemg--5">#FF3031</div>
-        <div class="item itemg itemg--6">#A2F16B</div>
-        <div class="item itemg itemg--7">#EC4849</div>
-        <div class="item itemg itemg--8">#FF3E4D</div>
-        <div class="item itemg itemg--9">#E71C23</div>
-        <div class="item itemg itemg--10">#EA425C</div>
-        <div class="item itemg itemg--11">#E8290C</div>
-        <div class="item itemg itemg--12">AE1438#</div>
-        <div class="item itemg itemg--13">#E83350</div>
-        <div class="item itemg itemg--14">#FF4848</div>
-        <div class="item itemg itemg--15">#FF362E</div>
+        <div class="item itemg itemg--1">#2ECC72</div>
+        <div class="item itemg itemg--2">#26AE60</div>
+        <div class="item itemg itemg--3">#6AB04C</div>
+        <div class="item itemg itemg--4">#6AB04A</div>
+        <div class="item itemg itemg--5">#BADC57</div>
+        <div class="item itemg itemg--6">#43BE31</div>
+        <div class="item itemg itemg--7">#45CE30</div>
+        <div class="item itemg itemg--8">#10A881</div>
+        <div class="item itemg itemg--9">#1BCA9B</div>
+        <div class="item itemg itemg--10">#7CEC9F</div>
+        <div class="item itemg itemg--11">#019031</div>
+        <div class="item itemg itemg--12">#A3CB37</div>
+        <div class="item itemg itemg--13">#75DA8B</div>
+        <div class="item itemg itemg--14">#53E0BC</div>
+        <div class="item itemg itemg--15">#218F76</div>
       </div>
 
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor dummy text to enable scrolling, sit amet, consectetur
-        adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-        qui officia deserunt mollit anim id est laborum.
-      </p>
+      <p class="color-name">Young Yellow</p>
+      <div class="cointainer spcmar">
+        <div class="item itemy itemy--1">#EEC213</div>
+        <div class="item itemy itemy--2">#F5C469</div>
+        <div class="item itemy itemy--3">#F4C724</div>
+        <div class="item itemy itemy--4">#F0DF87</div>
+        <div class="item itemy itemy--5">#DFAF2B</div>
+        <div class="item itemy itemy--6">#FAC42F</div>
+        <div class="item itemy itemy--7">#F3B63A</div>
+        <div class="item itemy itemy--8">#FBD28B</div>
+        <div class="item itemy itemy--9">#F3B431</div>
+        <div class="item itemy itemy--10">#FAD02E</div>
+        <div class="item itemy itemy--11">#E5B143</div>
+        <div class="item itemy itemy--12">#F3CC79</div>
+        <div class="item itemy itemy--13">#F9DDA4</div>
+        <div class="item itemy itemy--14">#FFF222</div>
+        <div class="item itemy itemy--15">#E1DA00</div>
+      </div>
     </div>
   </body>
 </html>
