Added scroll indicator

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <a href="#default">
         <img src="../images/logo_2.PNG" alt="Logo" id="logo" />
       </a>
+      <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+      </div>
 
       <!-- <div id="navbar-right">
         <div class="button-cointainer">
