Added Gray color palette

--- a/index.html
+++ b/index.html
@@ -151,6 +151,25 @@
         <div class="item itemy itemy--14">#FFF222</div>
         <div class="item itemy itemy--15">#E1DA00</div>
       </div>
+
+      <p class="color-name">Glossy Gray</p>
+      <div class="cointainer">
+        <div class="item itemgr itemgr--1">#7B8788</div>
+        <div class="item itemgr itemgr--2">#99AAAB</div>
+        <div class="item itemgr itemgr--3">#2C3335</div>
+        <div class="item itemgr itemgr--4">#616C6F</div>
+        <div class="item itemgr itemgr--5">#DAE0E2</div>
+        <div class="item itemgr itemgr--6">#535C68</div>
+        <div class="item itemgr itemgr--7">#333945</div>
+        <div class="item itemgr itemgr--8">#2F363F</div>
+        <div class="item itemgr itemgr--9">#586776</div>
+        <div class="item itemgr itemgr--10">#8395A7</div>
+        <div class="item itemgr itemgr--11">#A4B0BD</div>
+        <div class="item itemgr itemgr--12">#777E8B</div>
+        <div class="item itemgr itemgr--13">#758AA2</div>
+        <div class="item itemgr itemgr--14">#47535E</div>
+        <div class="item itemgr itemgr--15">#4C4B4B</div>
+      </div>
     </div>
   </body>
 </html>
