change image path notation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="navbar">
       <a href="#default">
-        <img src="../images/logo_2.PNG" alt="Logo" id="logo" />
+        <img src="images/logo_2.png" alt="Logo" id="logo" />
       </a>
       <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
@@ -133,8 +133,8 @@
         <div class="item itemg itemg--15">#218F76</div>
       </div>
 
-      <p class="color-name">Young Yellow</p>
-      <div class="cointainer spcmar">
+      <p class="color-name spcmar">Young Yellow</p>
+      <div class="cointainer">
         <div class="item itemy itemy--1">#EEC213</div>
         <div class="item itemy itemy--2">#F5C469</div>
         <div class="item itemy itemy--3">#F4C724</div>
@@ -152,8 +152,8 @@
         <div class="item itemy itemy--15">#E1DA00</div>
       </div>
 
-      <p class="color-name">Glossy Gray</p>
-      <div class="cointainer">
+      <p class="color-name spcmar">Glossy Gray</p>
+      <div class="cointainer spcmar">
         <div class="item itemgr itemgr--1">#7B8788</div>
         <div class="item itemgr itemgr--2">#99AAAB</div>
         <div class="item itemgr itemgr--3">#2C3335</div>
