--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id="navbar">
       <a href="#default">
-        <img src="images/logo_2.png" alt="Logo" id="logo" />
+        <img src="images/logo_2.PNG" alt="Logo" id="logo" />
       </a>
       <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
