--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css" media="screen">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Render textfield component -->
     <div class="mdc-text-field">
@@ -187,6 +189,11 @@
       </div>
     </div>
   </div> 
+
+  <div class="container footer__text">
+    <p class="footer_para">Built with <i class="fa fa-heart-o"></i> in the <span id="green">Green</span> city Gandhinagar, India.</p>
+    <small>© <span class="year">2019</span> by Cool_Colorpicker. All rights reserved.</small>
+  </div>
 <!-- <div data-aos="fade-right"></div> -->
     <!-- Required MDC Web JavaScript library -->
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
