give final touch to logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="object" class="slideUp"></div>
      <div id="navbar">
       <a href="#default">
-        <img src="images/logo_3.svg" alt="Logo" id="logo" />
+        <img src="images/logo_2.png" alt="Logo" id="logo" />
       </a>
       <div class="progress-container">
         <div class="progress-bar" id="myBar"></div>
